# OOP_CW_YD

./: main.py  pyproject.toml
data/: vacancies.json  vacancies_raw.json
src/: create_bd.py  parser.py  utils.py  vacancies.py  vacancy.py
src/files_from_live_session/: Parser_example.py  api_from_live.py  main.py  vacancies.json
src/my_version_doesnt_work/: currency_API.py  utils.py  vacancy.py
src/my_version_draft/: currency_dataclass.py  parser_yd.py  utils_yd.py  vacancy_dataclass.py
