[tool.poetry]
name = "oop-cw-yd"
version = "0.1.0"
description = ""
authors = ["Yukimokki <yana.domnina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
